# Poisson-Editing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: common.hpp  common_impl.hpp  poisson  poisson_clone.hpp  poisson_matting.hpp  utils.hpp
src/: common.cpp  poisson_clone.cpp  poisson_matting.cpp  utils.cpp
tools/: debug_utils.cpp  main.cpp  visualize.cpp
